--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Meta para responsividad -->
     <title>Payment</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 </head>
 <body>
 <nav class="navbar bg-body-tertiary">
@@ -14,69 +14,74 @@
     </div>
 </nav>
 <form>
-    <div class="container-fluid" >
+    <div class="container-fluid">
         <div class="row mt-2">
-            <!--CreditNumber-->
-            <div class="col-4">
+            <!-- Red Square-->
+            <div class="col-12 col-md-12 mb-3">
+                <div class="bg-danger-subtle">
+                    <p class="p-3 text-danger"><strong>Some fields are missing</strong></p>
+                </div>
+            </div>
+            <!-- Credit Number -->
+            <div class="col-12 col-md-4 mb-3">
                 <label class="form-label" for="inputCreditNumber">Credit #</label>
                 <input type="text" id="inputCreditNumber" class="form-control" placeholder="XXXXXXXXXXXXX" aria-label="Card #">
             </div>
-            <!--CVV-->
-            <div class="col-4">
-                <label class="form-label" for="inputPassword6" class="col-form-label">CVV</label>
-                <input type="password" id="inputPassword6" class="form-control" placeholder="0000" aria-describedby="passwordHelpInline"minlength="1" maxlength="4" required>
+            <!-- CVV -->
+            <div class="col-12 col-md-4 mb-3">
+                <label class="form-label" for="inputPassword6">CVV</label>
+                <input type="password" id="inputPassword6" class="form-control" placeholder="0000" aria-describedby="passwordHelpInline" minlength="1" maxlength="4" required>
             </div>
-            <!--Amount-->
-            <div class="col-4">
-                <label class="form-label" for="inputAmount" class="col-form-label">$</label>
+            <!-- Amount -->
+            <div class="col-12 col-md-4 mb-3">
+                <label class="form-label" for="inputAmount">$</label>
                 <input type="text" class="form-control" id="inputAmount" placeholder="Amount" aria-label="Dollar amount (with dot and two decimal places)">
             </div>
         </div>
 
         <div class="row mt-2">
-            <!--FirstName-->
-            <div class="col-6">
+            <!-- First Name -->
+            <div class="col-12 col-md-6 mb-3">
                 <label class="form-label" for="inputFirstName">First Name</label>
                 <input type="text" id="inputFirstName" class="form-control">
             </div>
-
-            <div class="col-6">
+            <!-- Last Name -->
+            <div class="col-12 col-md-6 mb-3">
                 <label class="form-label" for="inputLastName">Last Name</label>
                 <input type="text" id="inputLastName" class="form-control">
             </div>
         </div>
 
         <div class="row mt-2">
-            <!--City-->
-            <div class="col-4">
+            <!-- City -->
+            <div class="col-12 col-md-4 mb-3">
                 <label class="form-label" for="inputCity">City</label>
                 <input type="text" id="inputCity" class="form-control">
             </div>
-            <!--State-->
-            <div class="col-4">
+            <!-- State -->
+            <div class="col-12 col-md-4 mb-3">
                 <label class="form-label" for="dropdownStates">States</label>
                 <select class="form-select" id="dropdownStates" aria-label="Default select example">
                     <option selected>Pick a state</option>
                     <option value="1">Barcelona</option>
                     <option value="2">Canarias</option>
                     <option value="3">Madrid</option>
-                    <option value="3">Galicia</option>
-                    <option value="3">Andalucia</option>
-                    <option value="3">Castilla y Leon</option>
-
+                    <option value="4">Galicia</option>
+                    <option value="5">Andalucia</option>
+                    <option value="6">Castilla y Leon</option>
                 </select>
             </div>
-            <!--Postalcode-->
-            <div class="col-4">
+            <!-- Postal Code -->
+            <div class="col-12 col-md-4 mb-3">
                 <label class="form-label" for="inputPostalCode">Postal Code</label>
-                <input type="text" id="inputPostalCode" class="form-control">
+                <input type="number" id="inputPostalCode" class="form-control">
             </div>
         </div>
 
         <div class="row mt-2" style="justify-content: space-between">
-            <div class="col-4" >
+            <div class="col-12 col-md-4 mb-3">
                 <p>We accept:</p>
-                <div class="form-control bg-secondary d-inline px-3 py-2" >
+                <div class="form-control bg-secondary d-inline-flex px-3 py-2">
                     <div class="form-check form-check-inline" id="checkboxWeAccept">
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
                         <label class="form-check-label" for="inlineRadio1"><i class="fa-brands fa-cc-mastercard"></i></label>
@@ -95,29 +100,25 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col-4">
+            <div class="col-12 col-md-4 mb-3">
                 <label class="form-label" for="inputMessage">Message</label>
                 <input type="text" id="inputMessage" class="form-control">
             </div>
         </div>
     </div>
-
 </form>
+
 <nav class="navbar fixed bg-body-tertiary mt-3">
     <div class="container-fluid" style="flex-direction: row-reverse;">
-       <div class="row" style="display:flex; ">
-           <div>
-               <button class="btn btn-secondary" type="submit">Cancel</button>
-               <button class="btn btn-primary" type="submit">Send</button>
-           </div>
-
-       </div>
+        <div class="row" style="display:flex;">
+            <div>
+                <button class="btn btn-secondary" type="button">Cancel</button>
+                <button class="btn btn-primary" type="submit">Send</button>
+            </div>
+        </div>
     </div>
 </nav>
 
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 </body>
 </html>
